Improve Processors and fix HMenu layout issue

--- a/src/main/resources/gate/Gate.css
+++ b/src/main/resources/gate/Gate.css
@@ -4402,7 +4402,6 @@ body main > nav {
   border: none;
   padding: 8px;
   display: flex;
-  overflow: hidden;
   align-items: center;
   justify-content: center;
   background-color: var(--nav-background-color);
