--- a/src/main/webapp/components/Layout.less
+++ b/src/main/webapp/components/Layout.less
@@ -58,7 +58,6 @@ body {
 			border: none;
 			padding: 8px;
 			display: flex;
-			overflow: hidden;
 			align-items: center;
 			justify-content: center;
 			background-color: var(--nav-background-color);
